tests/baselines/reference/indexWithoutParamType2.errors.txt
indexWithoutParamType2.ts(3,5): error TS2564: Property '[x]' has no initializer and is not definitely assigned in the constructor.
indexWithoutParamType2.ts(3,6): error TS2304: Cannot find name 'x'.


==== indexWithoutParamType2.ts (2 errors) ====
    class C {
        // Used to be indexer, now it is a computed property
        [x]: string
        ~~~
!!! error TS2564: Property '[x]' has no initializer and is not definitely assigned in the constructor.
         ~
!!! error TS2304: Cannot find name 'x'.
    }